working on home page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pink Power, safest gym for woman based in stockholm">
+    <meta name="keywords" content="gym, training, muscles, strong woman">
+    <meta name="author" content="Pink Power">
+
     <title>Pink Power</title>
+
 </head>
 
 <body>
+    <nav>
+        <a href="contact.html" aria-label="contact pink power">Contact</a>
+        <a href="price.html" aria-label="price">Price</a>
+        <a hrel="#home" aria-label="Go to pink power top page">Pink Power</a>
+        <a href="book.html" aria-label="book appointment">Book</a>
+    </nav>
+
+    <section>
+        <div>
+            <h1>Welcome to Pink Power Gym</h1>
+            <p>Do you as a woman feel watched
+                and insecure when working out at
+                the all gender gym?
+                Then Pink Power is perfect for you.
+                This is a gym where only woman attend
+            </p>
+        </div>
+
+        <div>
+            <img src="walkthruimg/frontpage.png" alt=" woman stretching" height="450">
+        </div>
+
+        <div>come and visit us today</div>
+
+        <div>
+            <table>
+                <tr>
+                    <th>gym open</th>
+                    <td>Mon-Fri</td>
+                    <td>06-23</td>
+                </tr>
+                <tr>
+                    <th>desk Open</th>
+                    <td>Mon-fri</td>
+                    <td>08-14</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+    <div><span>address</span>storgatan 25 stockholm</div>
+
+    <div>
+        <h4>pink power ym</h4>
+        <p>pink Power is a one gender only gym locat in Stockholm,
+            this is your safest gym in town where you can workout without
+            feeling like someone is in your personal space. Welcome to train at our fantastic gym</p>
+    </div>
+    <section>
+        <div>
+            <h5>price</h5>
+        </div>
+        <div>
+            <h5>become Pink member today!</h5>
+        </div>
+        <div>
+            <h5>book</h5>
+        </div>
+
+    </section>
+
+    <section>
+        <div>
+            <img src="walkthruimg/price.jpg" alt="gym equitments on the ground" height="200">
+        </div>
+        <div>
+            <img src="walkthruimg/Joinpink.jpg" alt="seven standing up, one hand holding gym equitments" height="150">
+        </div>
+        <div>
+            <img src="walkthruimg/bookpic.jpg" alt="woman doing plank" height="150
+            ">
+        </div>
+
+    </section>
+    <div>
+        <p>We have personal trainer at Pink Power Do not hesitate to <a href="book.html">book</a> training session with
+            our
+            personal trainer</p>
+    </div>
+
+
+
+
+
+
 
 </body>
 
