working on footer

--- a/index.html
+++ b/index.html
@@ -93,6 +93,41 @@
             personal trainer</p>
     </div>
 
+    <footer>
+        <span>
+            <a href="contact.html" aria-label="contact us">contact us</a>
+        </span>
+        <span>
+            <a href="moreabout.html" aria-label="more about us">more about us</a>
+        </span>
+        <span>follow our</span>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+            aria-label="follow our instagram (link opens in new tab)">instagram</a>
+        <a href="https://www.facebook.com/?locale=sv_SE" target="_blank" rel="noopener"
+            aria-label="follow our facebook (link opens in new tab)">facebook</a>
+        <a href="https://x.com/" target="_blank" rel="noopener" aria-label="follow our x (link opens in new tab)">x</a>
+        <div>
+            <table>
+                <tr>
+                    <th>gym open</th>
+                    <td>Mon-Sun</td>
+                    <td>06-23</td>
+                </tr>
+                <tr>
+                    <th>desk open</th>
+                    <td>Mon-Fri</td>
+                    <td>08-14</td>
+                </tr>
+            </table>
+        </div>
+        <p>© 2025 Pink Power</p>
+        <a href="jobb.html" aria-label="look for job at pink power">jobb</a>
+        <p>address: storgatan stockholm</p>
+        <a href="joinpink.html" aria-label="start you membership at pink power">join pink</a>
+
+
+    </footer>
+
 
 
 
