modified code, added comments

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
 </head>
 
 <body>
+    <!--navigation bar-->
     <nav>
-        <a href="contact.html" aria-label="contact pink power">Contact</a>
-        <a href="price.html" aria-label="price">Price</a>
-        <a hrel="#home" aria-label="Go to pink power top page">Pink Power</a>
-        <a href="book.html" aria-label="book appointment">Book</a>
+        <!--contact page link-->
+        <a href="contact.html" aria-label="Contact pink power">Contact</a>
+        <!--price page link-->
+        <a href="price.html" aria-label="Go to price section">Price</a>
+        <!--go to homepage link-->
+        <a href="index.html" aria-label="Go to pink power homepage">Pink Power</a>
+        <!--booking link-->
+        <a href="book.html" aria-label="Book appointment">Book</a>
+        <!--start membership link-->
+        <a href="joinpink.html" aria-label="start your membership at pink power section">join pink</a>
     </nav>
 
     <section>
+        <!--introduction-->
         <div>
             <h1>Welcome to Pink Power Gym</h1>
             <p>Do you as a woman feel watched
@@ -32,9 +40,13 @@
         </div>
 
         <div>
+            <!--image-->
             <img src="walkthruimg/frontpage.png" alt=" woman stretching" height="450">
         </div>
+    </section>
 
+    <!--open/close time-->
+    <section>
         <div>come and visit us today</div>
 
         <div>
@@ -52,16 +64,19 @@
             </table>
         </div>
     </section>
-
-    <div><span>address</span>storgatan 25 stockholm</div>
-
-    <div>
-        <h4>pink power ym</h4>
-        <p>pink Power is a one gender only gym locat in Stockholm,
-            this is your safest gym in town where you can workout without
-            feeling like someone is in your personal space. Welcome to train at our fantastic gym</p>
-    </div>
+    <!--gym address, not a really address-->
+    <div><span>address</span> <a href="https://maps.app.goo.gl/Z7EWPi8gNRzmKkms8" target="_blank" title="Go to address"
+            aria-label="local address (opens in new tab)">storgatan
+            stockholm</a></div>
+    <!--second intro on page-->
     <section>
+        <div>
+            <h4>pink power gym</h4>
+            <p>pink Power is a one gender only gym locat in Stockholm,
+                this is your safest gym in town where you can workout without
+                feeling like someone is in your personal space. Welcome to train at our fantastic gym</p>
+        </div>
+
         <div>
             <h5>price</h5>
         </div>
@@ -71,21 +86,23 @@
         <div>
             <h5>book</h5>
         </div>
-
     </section>
-
+    <!--images for decoration-->
     <section>
+        <!--price image-->
         <div>
             <img src="walkthruimg/price.jpg" alt="gym equitments on the ground" height="200">
         </div>
+        <!--start membership image-->
         <div>
-            <img src="walkthruimg/Joinpink.jpg" alt="seven standing up, one hand holding gym equitments" height="150">
+            <img src="walkthruimg/Joinpink.jpg" alt="seven woman standing up, one hand holding gym equitments"
+                height="150">
         </div>
+        <!--book appointment image-->
         <div>
             <img src="walkthruimg/bookpic.jpg" alt="woman doing plank" height="150
             ">
         </div>
-
     </section>
     <div>
         <p>We have personal trainer at Pink Power Do not hesitate to <a href="book.html">book</a> training session with
@@ -94,18 +111,22 @@
     </div>
 
     <footer>
+        <!--link to contact pag-->
         <span>
             <a href="contact.html" aria-label="contact us">contact us</a>
         </span>
+        <!--link to about pink page-->
         <span>
             <a href="moreabout.html" aria-label="more about us">more about us</a>
         </span>
+        <!--social media links-->
         <span>follow our</span>
         <a href="https://www.instagram.com/" target="_blank" rel="noopener"
             aria-label="follow our instagram (link opens in new tab)">instagram</a>
         <a href="https://www.facebook.com/?locale=sv_SE" target="_blank" rel="noopener"
             aria-label="follow our facebook (link opens in new tab)">facebook</a>
         <a href="https://x.com/" target="_blank" rel="noopener" aria-label="follow our x (link opens in new tab)">x</a>
+        <!--open time link-->
         <div>
             <table>
                 <tr>
@@ -121,8 +142,11 @@
             </table>
         </div>
         <p>© 2025 Pink Power</p>
+        <!--link to applying for job-->
         <a href="jobb.html" aria-label="look for job at pink power">jobb</a>
+        <!--pink's local address-->
         <p>address: storgatan stockholm</p>
+        <!--link to start membership page-->
         <a href="joinpink.html" aria-label="start you membership at pink power">join pink</a>
 
 
