--- a/index.html
+++ b/index.html
@@ -27,23 +27,21 @@
         <a href="joinpink.html" aria-label="start your membership at pink power section">join pink</a>
     </nav>
 
-    <section>
+    <header>
         <!--introduction-->
-        <div>
-            <h1>Welcome to Pink Power Gym</h1>
-            <p>Do you as a woman feel watched
-                and insecure when working out at
-                the all gender gym?
-                Then Pink Power is perfect for you.
-                This is a gym where only woman attend
-            </p>
-        </div>
 
-        <div>
-            <!--image-->
-            <img src="walkthruimg/frontpage.png" alt=" woman stretching" height="450">
-        </div>
-    </section>
+        <h4>Welcome to Pink Power Gym</h4>
+        <p>Do you as a woman feel watched
+            and insecure when working out at
+            the all gender gym?
+            Then Pink Power is perfect for you.
+            This is a gym where only woman attend
+        </p>
+    </header>
+    <!--image for introduction-->
+    <div>
+        <img src="walkthruimg/frontpage.png" alt=" woman stretching" height="450">
+    </div>
 
     <!--open/close time-->
     <section>
@@ -65,7 +63,7 @@
         </div>
     </section>
     <!--gym address, not a really address-->
-    <div><span>address</span> <a href="https://maps.app.goo.gl/Z7EWPi8gNRzmKkms8" target="_blank" title="Go to address"
+    <div><span>address</span><a href="https://maps.app.goo.gl/Z7EWPi8gNRzmKkms8" target="_blank" title="Go to address"
             aria-label="local address (opens in new tab)">storgatan
             stockholm</a></div>
     <!--second intro on page-->
@@ -78,76 +76,72 @@
         </div>
 
         <div>
-            <h5>price</h5>
-        </div>
-        <div>
-            <h5>become Pink member today!</h5>
-        </div>
-        <div>
-            <h5>book</h5>
+            <p>price</p>
+            <p>become a <span>pink</span> member today!</p>
+            <p>book</p>
         </div>
     </section>
     <!--images for decoration-->
-    <section>
-        <!--price image-->
-        <div>
-            <img src="walkthruimg/price.jpg" alt="gym equitments on the ground" height="200">
-        </div>
+    <!--price image-->
+    <div class="priceimg">
+        <img src="walkthruimg/price.jpg" alt="gym equitments on the ground" height="200">
         <!--start membership image-->
-        <div>
-            <img src="walkthruimg/Joinpink.jpg" alt="seven woman standing up, one hand holding gym equitments"
-                height="150">
-        </div>
+        <img src="walkthruimg/Joinpink.jpg" alt="seven woman standing up, one hand holding gym equitments" height="150">
         <!--book appointment image-->
-        <div>
-            <img src="walkthruimg/bookpic.jpg" alt="woman doing plank" height="150
-            ">
-        </div>
-    </section>
-    <div>
-        <p>We have personal trainer at Pink Power Do not hesitate to <a href="book.html">book</a> training session with
-            our
-            personal trainer</p>
+        <img src="walkthruimg/bookpic.jpg" alt="woman doing plank" height="150">
     </div>
+    <p>We have personal trainer at Pink Power Do not hesitate to <a href="book.html">book</a> training session
+        with
+        our
+        personal trainer</p>
 
     <footer>
         <!--link to contact pag-->
-        <span>
-            <a href="contact.html" aria-label="contact us">contact us</a>
-        </span>
-        <!--link to about pink page-->
-        <span>
-            <a href="moreabout.html" aria-label="more about us">more about us</a>
-        </span>
-        <!--social media links-->
-        <span>follow our</span>
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-            aria-label="follow our instagram (link opens in new tab)">instagram</a>
-        <a href="https://www.facebook.com/?locale=sv_SE" target="_blank" rel="noopener"
-            aria-label="follow our facebook (link opens in new tab)">facebook</a>
-        <a href="https://x.com/" target="_blank" rel="noopener" aria-label="follow our x (link opens in new tab)">x</a>
-        <!--open time link-->
         <div>
-            <table>
-                <tr>
-                    <th>gym open</th>
-                    <td>Mon-Sun</td>
-                    <td>06-23</td>
-                </tr>
-                <tr>
-                    <th>desk open</th>
-                    <td>Mon-Fri</td>
-                    <td>08-14</td>
-                </tr>
-            </table>
+            <ul>
+                <!--contact link-->
+                <li><a href="contact.html" aria-label="contact us">contact us</a></li>
+                <!--link to about pink page-->
+                <li> <a href="moreabout.html" aria-label="more about us">more about us</a></li>
+                <li>follow our</li>
+                <!--social media links-->
+            </ul>
         </div>
-        <p>© 2025 Pink Power</p>
-        <!--link to applying for job-->
-        <a href="jobb.html" aria-label="look for job at pink power">jobb</a>
-        <!--pink's local address-->
-        <p>address: storgatan stockholm</p>
-        <!--link to start membership page-->
-        <a href="joinpink.html" aria-label="start you membership at pink power">join pink</a>
+
+        <div>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                aria-label="follow our instagram (link opens in new tab)">instagram</a>
+            <a href="https://www.facebook.com/?locale=sv_SE" target="_blank" rel="noopener"
+                aria-label="follow our facebook (link opens in new tab)">facebook</a>
+            <a href="https://x.com/" target="_blank" rel="noopener"
+                aria-label="follow our x (link opens in new tab)">x</a>
+        </div>
+
+        <!--open time-->
+        <div>
+            <ul>
+                <li>gym open Mon-Sun 06-23</li>
+            </ul>
+            <ul>
+                <li>desk open Mon-Fri 08-14</li>
+            </ul>
+        </div>
+
+        <div>
+            <p>© 2025 Pink Power</p>
+        </div>
+
+        <div>
+            <ul>
+                <!--link to start membership page-->
+                <li><a href="joinpink.html" aria-label="start you membership at pink power">join pink</a></li>
+                <!--link to applying for job-->
+                <li><a href="jobb.html" aria-label="look for job at pink power">jobb</a></li>
+                <!--address link, not a really address-->
+                <li>address<a href="https://maps.app.goo.gl/gXb5rEK19fcdEk9q8" target="_blank" rel="noopener"
+                        aria-label="local address (opens in new tab)"> storgatan stockholm</a></li>
+            </ul>
+        </div>
 
 
     </footer>
