added comments, bar organized

--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,15 @@
 <body>
     <!--navigation bar-->
     <nav>
+        <!--contact link-->
         <a href="contact.html" aria-label="contact pink power">Contact</a>
+        <!--price link-->
         <a href="price.html" aria-label="price">Price</a>
+        <!--home page link-->
         <a hrel="#home" aria-label="Go to pink power top page">Pink Power</a>
+        <!--booking link-->
         <a href="book.html" aria-label="book appointment">Book</a>
+        <!--start membership link-->
         <a href="joinpink.html" aria-label="start your membership at pink power">join pink</a>
     </nav>
     <!--image-->
