--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Pink Power, safest gym for woman based in stockholm">
     <meta name="keywords" content="gym, training, muscles, strong woman">
     <meta name="author" content="Pink Power">
-
+    <link rel="stylesheet" href="homepage.css">
 
     <title>Pink Power</title>
 
