changed ul lis to div for easy flexbox

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 <body>
     <!--navigation bar-->
     <header>
-        <nav class="navbar">
+        <div class="navbar_center">
+
             <!--contact page link-->
-            <a href="contact.html" aria-label="Contact pink power">Contact</a>
+            <div class="navbar_text"><a href="contact.html" aria-label="Contact pink power">Contact</a></div>
             <!--price page link-->
-            <a href="price.html" aria-label="Go to price section">Price</a>
+            <div class="navbar_text"><a href="price.html" aria-label="Go to price section">Price</a></div>
             <!--go to homepage link-->
-            <a href="index.html" aria-label="Go to pink power homepage">Pink Power</a>
+            <div><a href="index.html" aria-label="Go to pink power homepage">Pink Power</a></div>
             <!--booking link-->
-            <a href="book.html" aria-label="Book appointment">Book</a>
+            <div class="navbar_text"><a href="book.html" aria-label="Book appointment">Book</a></div>
             <!--start membership link-->
-            <a href="joinpink.html" aria-label="start your membership at pink power section">join pink</a>
-        </nav>
+            <div class="navbar_text"><a href="joinpink.html"
+                    aria-label="start your membership at pink power section">join pink</a></div>
+        </div>
     </header>
 
     <section class="first_intro">
