--- a/contact.html
+++ b/contact.html
@@ -7,56 +7,58 @@
     <meta name="description" content="Pink Power, safest gym for woman based in stockholm">
     <meta name="keywords" content="gym, training, muscles, strong woman">
     <meta name="author" content="Pink Power">
+    <link rel="stylesheet" href="contact.css">
     <title>Contact us</title>
 </head>
 
 <body>
     <!--navigation bar-->
-    <nav>
-        <!--contact link-->
-        <a href="contact.html" aria-label="contact pink power">Contact</a>
-        <!--price link-->
-        <a href="price.html" aria-label="price">Price</a>
-        <!--home page link-->
-        <a hrel="#home" aria-label="Go to pink power top page">Pink Power</a>
-        <!--booking link-->
-        <a href="book.html" aria-label="book appointment">Book</a>
-        <!--start membership link-->
-        <a href="joinpink.html" aria-label="start your membership at pink power">join pink</a>
-    </nav>
-    <!--image-->
     <header>
-        <img src="/walkthruimg/contactpic.jpg" alt="gym equitment on the ground" height="300">
+        <nav class="text_bar">
+            <!--contact link-->
+            <a href="contact.html" aria-label="contact pink power">Contact</a>
+            <!--price link-->
+            <a href="price.html" aria-label="price">Price</a>
+            <!--home page link-->
+            <a href="index.html" aria-label="Go to pink power top page">Pink Power</a>
+            <!--booking link-->
+            <a href="book.html" aria-label="book appointment">Book</a>
+            <!--start membership link-->
+            <a href="joinpink.html" aria-label="start your membership at pink power">join pink</a>
+        </nav>
     </header>
+    <!--image-->
+    <section>
+        <img id="top_image" src="/walkthruimg/contactpic.jpg" alt="gym equitment on the ground" height="350">
+    </section>
 
     <form action="">
         <!--this is where user fill their details. name/email-->
         <fieldset>
-            <p>contact us</p>
+            <legend>Contact us</legend>
             <div>
                 <label for="fullname">name</label>
                 <input id="fullname" type="text" name="fullname" aria-label="Type in your full name"
-                    placeholder="type your full name">
+                    placeholder="Type your full name">
             </div>
 
             <div>
                 <label for="gmaiset">email</label>
                 <input id="gmaiset" type="email" name="email" aria-label="Type in your email"
-                    placeholder="enter your email">
+                    placeholder="Enter your email">
             </div>
-        </fieldset>
-        <!--this is a text area for users-->
-        <fieldset>
-            <label for="message">write to us</label>
-            <br>
-            <textarea name="message" id="" rows="9" cols="50" aria-label="Write your message"
-                placeholder=" write your message here"></textarea>
+            <!--this is a text area for users-->
+            <div>
+                <p>write your message bellow</p>
+                <textarea name="message" id="message" rows="9" cols="50" aria-label="Write your message"
+                    placeholder=" write your message here"></textarea>
+            </div>
+            <div>
+                <input id="send" type="submit" value="Send" aria-label="Send the message">
+            </div>
 
         </fieldset>
         <!--this where to sumbmit/send message-->
-        <div>
-            <input type="submit" value="Send" aria-label="send">
-        </div>
 
     </form>
 
